[package]
name = "rustcuda"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
cuda_std = "0.2.2"
cust_core = "0.1.1"
gpu_rand = "0.1.3"

[build-dependencies]
cuda_builder = "0.3.0"


[toolchain]
channel = "stable"
components = ["rust-src", "rustc-dev", "llvm-tools-preview"]
